--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Hello world</h1>
     <form action="#">
         <input type="text" value="ghbdfzv">
-        <input type="submit" onclick=sendLocation value="отправить">
+        <input type="submit"  value="отправить">
     </form>
     <script src="index.js"></script>
 </body>
